--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,19 +1,45 @@
 project:
   type: website
-
+  resources:
+    R
+  preview:
+    port: 4321
+    
 website:
-  title: "advent-of-code-website-template"
+  title: "Advent of Code"
+  #site-url: https://github.com
+  description: My solutions to Advent of Code
+  repo-url: https://github.com/EllaKaye/advent-of-code-website-template
   navbar:
+#    left:
+#      - 2020.qmd
     right:
-      - about.qmd
       - icon: github
-        href: https://github.com/
-      - icon: twitter
-        href: https://twitter.com
+        href: https://github.com/EllaKaye/advent-of-code-website-template
+  open-graph: true
+
+execute:
+  freeze: auto
+  echo: true
+  message: false
+  warning: false
+
 format:
   html:
-    theme: cosmo
+    theme: 
+      light: [cosmo, custom-light.scss]
+      dark: custom-dark.scss
     css: styles.css
+    code-block-border-left: true
+    # highlight-style: 
+    #   light: assets/ek-light.theme
+    #   dark: assets/ek-dark.theme
+    smooth-scroll: true
+    link-external-newwindow: true
+    code-fold: show
+    code-summary: "Toggle the code"
+
+editor: source
 
 
 
