Setup GHA to publish on push to main

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,10 @@ project:
     - fonts
   preview:
     port: 4321
-    
+
+execute:
+  freeze: auto
+  
 website:
   title: "Advent of Code"
   #site-url: https://github.com
